:beetle: line highlight fix for some language syntaxes. Specifically, babel's javascript syntax no longer highlights the leading white space.

--- a/styles/custom-folds.less
+++ b/styles/custom-folds.less
@@ -13,6 +13,10 @@ atom-text-editor::shadow {
 			.comment.line {
 				color: @text-color-info;
 				border-top: 1px solid @text-color-info;
+
+				.leading-whitespace {
+					border-top: 1px solid @pane-item-background-color;
+				}
 			}
 		}
 	}
@@ -25,6 +29,10 @@ atom-text-editor::shadow {
 			.comment.line {
 				color: @text-color-info;
 				border-bottom: 1px solid @text-color-info;
+
+				.leading-whitespace {
+					border-bottom: 1px solid @pane-item-background-color;
+				}
 			}
 		}
 	}
